update concur expense page

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -39,6 +39,8 @@ $gradient-bg-reverse: transparent
   linear-gradient(241deg, #0497b5 0%, #53d2b2 100%) 0% 0% no-repeat padding-box;
 $gradient-bg-2: transparent linear-gradient(90deg, #111111 0%, #444444 100%) 0%
   0% no-repeat padding-box;
+$gradient-bg-reverse-2: transparent linear-gradient(270deg, #111111 0%, #444444 100%) 0%
+  0% no-repeat padding-box;
 
 $blue-color: #0497b5;
 $blue-color-1: #00758c;
