--- a/app/pages/concur_expense/index.njk
+++ b/app/pages/concur_expense/index.njk
@@ -327,7 +327,7 @@ link: "#material"
         <li id="worry3" class="card-type25">
           <div class="card-heading">
             <span class="card-index">社長のお悩み</span>
-            <h3 class="card-issue-title"><span>ブラックボックスになっている 経費支出の全体を把握したい</span></h3>
+            <h3 class="card-issue-title">ブラックボックスになっている 経費支出の全体を把握したい</h3>
           </div>
           <div class="triangle"></div>
           <h1 class="card-solution-title"><span>多様な経費レポート</span>で、経費支出の分析・改善!</h1>
