--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -33,7 +33,7 @@
       </div>
       <div class="section-welcome__sub_title">
         クレディセゾンは、資金繰り改善や資金調達をもっと手軽に実現できる </br>
-        サ－ビスをご提供いたします。
+        サ－ビスを提供いたします。
       </div>
     </div>
   </section>
