--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -197,7 +197,7 @@ link: "#application"
           </div>
           <div class="saison-introduce">
             <div class="saison-introduce-video">
-              <img src="/assets/img/saison_welfare/dummy.png" alt="dummy">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/-5XByce-M0c?si=4GKe6tfxMde7nnas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="saison-introduce-description">
               <h5 class="ttl-quinary bold">【サービス紹介動画（43秒）】</h5>
