--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -27,8 +27,8 @@
 
       <h1 class="ttl-primary">福利厚生を充実できるサービス</h1>
 
-      <h4 class="ttl-quaternary">クレディセゾンは、従業員の皆様の暮らしに役立つさまざまなサービスが<br>
-        最大66％オフ。導入しやすい福利厚生優待サービスならセゾンフクリコ。</h4>
+      <h4 class="ttl-quaternary">従業員の皆様の暮らしに役立つさまざまなサービスが<br>
+        最大66％オフ。導入しやすい福利厚生サービスならセゾンフクリコ。</h4>
     </div>
   </section>
 
@@ -183,7 +183,7 @@
             </h3>
 
             <dd>
-              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者の方に業務をご負担いただく必要はありません。
+              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者の方に業務のご負担はありません。
             </dd>
             <div class="flex gap30 card-container">
 
